--- a/less/home.less
+++ b/less/home.less
@@ -8,6 +8,7 @@
   }
   .profile-pic-container {
     padding-right: 30px;
+    margin-top: 21px;
 
     .profile-pic {
       > img { width: 100%; }
