--- a/less/style.less
+++ b/less/style.less
@@ -24,6 +24,7 @@
 @import "bs/input-groups.less";
 @import "bs/navs.less";
 @import "bs/navbar.less";
+@import "bs-overwrite/navbar.less";
 @import "bs/breadcrumbs.less";
 @import "bs/pagination.less";
 @import "bs/pager.less";
