Two rows layout.

--- a/less/artworks.less
+++ b/less/artworks.less
@@ -63,6 +63,19 @@
     height: 100%;
   }
 
+  .big-figure-column {
+    font-size: 0;
+  }
+  .big-figure-row {
+    display: inline-block;
+    vertical-align: top;
+    height: 47.5%;
+    margin-top: 5%;
+    &:first-child {
+      margin-top: 0;
+    }
+  }
+
   .big-figurecaption {
     font-size: 12px;
     line-height: 18px;
