--- a/less/artworks.less
+++ b/less/artworks.less
@@ -48,6 +48,33 @@
         vertical-align: top;
       }
     }
+
+    .scroll-button {
+      position: fixed;
+      bottom: 50px;
+      right: 180px;
+          -ms-writing-mode: initial;
+      -webkit-writing-mode: initial;
+         -moz-writing-mode: initial;
+          -ms-writing-mode: initial;
+              writing-mode: initial;
+      a {
+        font-family: Azuki;
+        font-size: 98px;
+        color: #535d5f;
+        text-decoration: none;
+        margin-left: 20px;
+        &:hover {
+          color: #333;
+        }
+      }
+    }
+
+    footer, .footer {
+      margin-right: 100px;
+      padding: 0;
+    }
+
   }
 }
 
@@ -65,7 +92,17 @@
 
   .big-figure-column {
     font-size: 0;
+    &, .big-figure {
+      margin-right: 50px;
+      &:first-child {
+        margin-right: 0;
+      }
+    }
+    img {
+      box-shadow: 0 0 5px gray;
+    }
   }
+
   .big-figure-row {
     display: inline-block;
     vertical-align: top;
@@ -77,7 +114,10 @@
   }
 
   .big-figurecaption {
-    font-size: 12px;
-    line-height: 18px;
+    display: block;
+    margin-left: 10px;
+    .artwork-name, .artwork-meta { line-height: 1.5em; }
+    .artwork-name { font-size: 18px; }
+    .artwork-meta { font-size: 14px; }
   }
 }
