Fallback to regular gallery if writing-mode is not supported.

--- a/less/artworks.less
+++ b/less/artworks.less
@@ -55,6 +55,7 @@
 
     .scroll-button {
       position: fixed;
+      display: block;
       bottom: 50px;
       right: 180px;
           -ms-writing-mode: initial;
