Basic version of artwork details page.

--- a/less/style.less
+++ b/less/style.less
@@ -26,6 +26,7 @@
 @import "bs/navbar.less";
 @import "bs-overwrite/navbar.less";
 @import "bs/breadcrumbs.less";
+@import "bs-overwrite/breadcrumbs.less";
 @import "bs/pagination.less";
 @import "bs/pager.less";
 @import "bs/labels.less";
@@ -54,4 +55,5 @@
 @import "global.less";
 @import "home.less";
 @import "artworks.less";
+@import "artwork.less";
 @import "gallery.less";
