--- a/less/style.less
+++ b/less/style.less
@@ -53,6 +53,7 @@
 
 // Pages
 @import "global.less";
+@import "icon-fonts.less";
 @import "home.less";
 @import "artworks.less";
 @import "artwork.less";
