Front-end changes.

--- a/less/artwork.less
+++ b/less/artwork.less
@@ -7,13 +7,18 @@
     height: 100%;
   }
 
-  .artwork-image-left-container {
+  .artwork-image-container {
     .make-lg-column(3);
     height: 100%;
     padding-right: 45px;
   }
 
-  .header-container {
+  .artwork-content-container {
+    .make-lg-column(9);
+  }
+
+  .artwork-heading-container {
+    .make-lg-column(12);
     margin-bottom: 20px;
     h1 {
       display: inline-block;
@@ -40,10 +45,6 @@
       height: 100%;
       min-height: 700px;
     }
-  }
-
-  .artwork-details-right-container {
-    .make-lg-column(9);
   }
 
   .breadcrumbs-container {
