Responsive artwork page.

--- a/less/style.less
+++ b/less/style.less
@@ -52,6 +52,7 @@
 @import "bs/responsive-utilities.less";
 
 // Pages
+@import "mixins.less";
 @import "global.less";
 @import "icon-fonts.less";
 @import "home.less";
