--- a/less/artwork.less
+++ b/less/artwork.less
@@ -7,21 +7,67 @@
     height: 100%;
   }
 
+  /***********************************
+   * Display artwork image on the left
+   *         content on the right.
+   ***********************************/
   .artwork-image-container-left {
+    .make-sm-column(3);
+    .make-md-column(3);
     .make-lg-column(3);
+    .sm-fixed-artwork-image-container-width(3);
+    .md-fixed-artwork-image-container-width(3);
+    .lg-fixed-artwork-image-container-width(3);
+    position: fixed;
     height: 100%;
-    padding-right: 45px;
-
+    
     .artwork-image {
       height: 100%;
-      float: right;
       img {
+        float: right;
         height: 100%;
         min-height: 700px;
       }
     }
+
+    @media (max-width: @screen-sm-min) {
+      position: initial;
+      margin-top: 100px;
+      .artwork-image {
+        height: auto;
+        text-align: center;
+        img {
+          height: auto;
+          width: 100%;
+          margin-bottom: 20px;
+        }
+      }
+    }
   }
 
+  .header-container-right,
+  .artwork-content-container-right {
+    .make-sm-column(9);
+    .make-sm-column-offset(3);
+    .make-md-column(9);
+    .make-md-column-offset(3);
+    .make-lg-column(9);
+    .make-lg-column-offset(3);
+  }
+
+  .header-container-right {
+    @media (max-width: @screen-sm-min) {
+      position: fixed;
+      top: 0;
+      width: @container-lg - @grid-gutter-width * 2;
+      .navbar { margin-top: 20px; }
+    }
+  }
+
+  /**********************************
+   * Display artwork image on the top
+   *         content on the bottom.
+   **********************************/
   .artwork-image-container-top {
     .make-lg-column(12);
     margin: 110px 0 50px 0;
@@ -34,21 +80,20 @@
     }
   }
 
-  .header-container-right,
-  .artwork-content-container-right {
-    .make-lg-column(9);
-  }
-
   .artwork-content-container-bottom {
     .make-lg-column(12);
   }
 
-  .header-container {
+  .header-container-top {
     position: fixed;
-    width: @container-lg - 30;
+    width: @container-lg - @grid-gutter-width * 2;
     .navbar { margin-top: 20px; }
   }
 
+
+  /**********************************
+   * Content styling
+   **********************************/
   .artwork-heading-container {
     .make-lg-column(12);
     margin-bottom: 20px;
@@ -67,6 +112,9 @@
           color: @gray-dark;
         }
       }
+      @media (max-width: @screen-sm-min) {
+        margin-left: 0;
+      }
     }
   }
 
@@ -75,7 +123,11 @@
   }
 
   .artwork-meta-container {
+    .make-xs-column(12);
+    .make-sm-column(12);
+    .make-md-column(4);
     .make-lg-column(4);
+    margin-bottom: 30px;
   }
 
   .artwork-meta {
@@ -87,6 +139,9 @@
   }
 
   .artwork-details-container {
+    .make-xs-column(12);
+    .make-sm-column(12);
+    .make-md-column(8);
     .make-lg-column(8);
   }
 
