--- a/less/global.less
+++ b/less/global.less
@@ -134,4 +134,8 @@ h1, h2 {
   text-align: right;
   margin-top: 50px;
   padding: 20px 0;
+
+  @media (max-width: @screen-sm-min) {
+    text-align: center;
+  }
 }
