--- a/less/artwork.less
+++ b/less/artwork.less
@@ -1,7 +1,3 @@
-.header-container {
-  .make-lg-column(12);
-}
-
 #artwork {
   &, .artwork-layout-container {
     height: 100%;
@@ -25,6 +21,7 @@
       height: 100%;
       img {
         float: right;
+        margin-right: 20px;
         height: 100%;
         min-height: 700px;
       }
@@ -40,6 +37,7 @@
           height: auto;
           width: 100%;
           margin-bottom: 20px;
+          margin-right: 0;
         }
       }
     }
