--- a/less/global.less
+++ b/less/global.less
@@ -128,6 +128,10 @@ h1, h2 {
 }
 */
 
+.header-container {
+  .make-lg-column(12);
+}
+
 .footer {
   font-size: @font-size-base * 0.8;
   color: #999;
